force-app/main/default/objects/Property__c/fields/Batch_Price__c.field-meta.xml
<CustomField>
    <fullName>Batch_Price__c</fullName>
    <label>Batch Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>