force-app/main/default/objects/Property__c/fields/DisPrice__c.field-meta.xml
<CustomField>
    <fullName>DisPrice__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>