force-app/main/default/objects/Property__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>This field added through Schema Builder</description>
    <inlineHelpText>Brokers wants to see on the property record where the property is located</inlineHelpText>
    <label>Street Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>